unpackaged/main/default/objects/ebotdata__Bot_Intent_Dialog_Mapping__mdt/ebotdata__Bot_Intent_Dialog_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Intent to Dialog Name mapping to provide more inputs to Custom Log records for enhanced reporting</description>
    <label>Bot Intent Dialog Mapping</label>
    <pluralLabel>Bot Intent Dialog Mappings</pluralLabel>
</CustomObject>