unpackaged/main/default/objects/ebotdata__Bot_Intent_Dialog_Mapping__mdt/fields/ebotdata__Dialog_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Dialog_Api_Name__c</fullName>
    <description>Einstein Bot Dialog Api Name</description>
    <inlineHelpText>Einstein Bot Dialog Api Name for this Intent</inlineHelpText>
    <label>Dialog Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>