unpackaged/main/default/objects/ebotdata__Bot_Intent_Dialog_Mapping__mdt/fields/ebotdata__Escalation_Outcome__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Escalation_Outcome__c</fullName>
    <label>Escalation Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agents Available</fullName>
                <default>true</default>
                <label>Agents Available</label>
            </value>
            <value>
                <fullName>No Agents Available</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Case Already Created</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>