unpackaged/main/default/objects/ebotdata__Bot_Intent_Dialog_Mapping__mdt/fields/ebotdata__Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Escalation_Reason__c</fullName>
    <description>Escalation By Design / Not By Design</description>
    <inlineHelpText>Escalation By Design / Not By Design</inlineHelpText>
    <label>Escalation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Design</fullName>
                <default>true</default>
                <label>By Design</label>
            </value>
            <value>
                <fullName>Not By Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>