unpackaged/main/default/objects/ebotdata__Bot_Intent_Dialog_Mapping__mdt/fields/ebotdata__Metric__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Metric__c</fullName>
    <description>Metric Type for this Dialog</description>
    <inlineHelpText>Metric Type for this Dialog</inlineHelpText>
    <label>Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Start</fullName>
                <default>true</default>
                <label>Business Start</label>
            </value>
            <value>
                <fullName>Business End</fullName>
            </value>
            <value>
                <fullName>Business Direct</fullName>
            </value>
            <value>
                <fullName>Topic</fullName>
            </value>
            <value>
                <fullName>Escalation Start</fullName>
            </value>
            <value>
                <fullName>Escalation End</fullName>
            </value>
            <value>
                <fullName>Offered Followup Question</fullName>
            </value>
            <value>
                <fullName>Followup - Yes Response</fullName>
            </value>
            <value>
                <fullName>Followup - No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>