unpackaged/main/default/objects/ebotdata__Bot_Intent_Dialog_Mapping__mdt/fields/ebotdata__Topic_Name__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Topic_Name__c</fullName>
    <description>Topic Name for this Dialog</description>
    <inlineHelpText>Topic Name for this Dialog</inlineHelpText>
    <label>Topic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>