unpackaged/main/default/objects/ebotdata__Bot_Intent_Dialog_Mapping__mdt/fields/ebotdata__Type__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Type__c</fullName>
    <description>Type of Dialog</description>
    <inlineHelpText>Type of Dialog</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
                <default>true</default>
                <label>Business</label>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>